--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "cruise-2028-organizer",
   "private": true,
@@ -10,16 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "lucide-react": "^0.474.0",
-    "@google/genai": "^0.21.0"
+    "react": "latest",
+    "react-dom": "latest",
+    "lucide-react": "latest",
+    "@google/genai": "latest"
   },
   "devDependencies": {
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "^5.7.3",
-    "vite": "^6.0.7"
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "@vitejs/plugin-react": "latest",
+    "typescript": "latest",
+    "vite": "latest"
   }
 }
